Class Name Change RPG -> Mage(Game Name)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,12 +62,10 @@ FontDPIPreset=Standard
 FontDPI=72
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/Project_Mage")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Project_Mage")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/Project_Mage")
-+ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/Project_Mage")
-+ActiveGameNameRedirects=(OldGameName="RPG_Untitled",NewGameName="/Script/Project_Mage")
-+ActiveGameNameRedirects=(OldGameName="/Script/RPG_Untitled",NewGameName="/Script/Project_Mage")
++ActiveClassRedirects=(OldClassName="/Script/RPG_Untitled.RPGEnemy",NewClassName="/Script/Project_Mage.MageEnemy")
++ActiveClassRedirects=(OldClassName="/Script/RPG_Untitled.RPGCharacter",NewClassName="/Script/Project_Mage.MageCharacter")
++ActiveClassRedirects=(OldClassName="/Script/RPG_Untitled.RPGPlayerController",NewClassName="/Script/Project_Mage.MagePlayerController")
+
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
